CbeerDev/objects/Account_Auth_Feature__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CBBD Account Auths/Features</relationshipLabel>
        <relationshipName>Account_Auth_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBI_US_Item_Authorization_Feature__c</fullName>
        <description>Store-level junction between Item Authorization/Feature record and Account</description>
        <label>CBBD US Item Authorization &amp; Feature</label>
        <referenceTo>CBI_US_Item_Authorization_Feature__c</referenceTo>
        <relationshipLabel>CBBD Account Auths/Features</relationshipLabel>
        <relationshipName>Account_Auth_Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Store_CD__c</fullName>
        <formula>Account__r.Store_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if junction object is managed by Store Set automation, or manually managed by user.</description>
        <label>System Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CBBD Account Auth/Feature</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AAF-{0000}</displayFormat>
        <label>Account Auth/Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBBD Account Auths/Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>